Combine config file with settings